Fifth commit for lecture 4

--- a/Week46-Lecture4.html
+++ b/Week46-Lecture4.html
@@ -357,7 +357,7 @@ display: none;
 </div>
 
 
-<p>This is the second Readme file for the Data Science and HR analytics
+<p>This is the Rmd file for the Data Science and HR analytics
 course, trying out experiments on the code for lecture 4.</p>
 <p>So let’s get started.</p>
 <pre class="r"><code>SC &lt;- read.csv(&quot;/Users/annelies2/Downloads/semiconductor.csv&quot;)
