Sixth commit for lecture 5

--- a/Week46-Lecture5.html
+++ b/Week46-Lecture5.html
@@ -357,7 +357,7 @@ display: none;
 </div>
 
 
-<p>This is a Readme file for the Data Science and HR analytics course,
+<p>This is a Rmd file for the Data Science and HR analytics course,
 trying out experiments on the code for lecture 5.</p>
 <p>So let’s get started.</p>
 <pre class="r"><code>library(MASS)
