--- a/Week48-Lecture6.html
+++ b/Week48-Lecture6.html
@@ -357,7 +357,7 @@ display: none;
 </div>
 
 
-<p>This is the Readme file for the Data Science and HR analytics course,
+<p>This is the Rmd file for the Data Science and HR analytics course,
 trying out experiments on the code for lecture 6.</p>
 <p>So let’s get started.</p>
 <pre class="r"><code>data &lt;- read.table(&quot;/Users/annelies2/Downloads/abortion.dat&quot;, skip=1, sep=&quot;\t&quot;)
